# personal_assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODOS.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: security.yml  tests.yml  ui-tests.yml
alembic/: env.py
alembic/versions/: 0001_create_conversations_and_messages.py  0002_add_users_and_user_scoped_resources.py  0003_rename_messages_metadata_to_extra_metadata.py  0004_decouple_conversations_from_agents.py  0005_add_message_role_enum.py  0006_workspace_id_fk_on_conversations.py  0007_add_agent_id_to_messages.py  0008_add_observability_columns_to_messages.py  0009_add_user_api_keys_table.py  0010_add_conversation_title.py
api/: dependencies.py  exception_handlers.py  main.py  rate_limit.py  schemas.py  streaming.py
api/routers/: agents.py  auth.py  health.py  params.py  providers.py  usage.py  workspaces.py
nginx/: Dockerfile  nginx.conf
personal_assistant/: __init__.py  bootstrap.py  config.py
personal_assistant/agents/: __init__.py  assistant_agent.py  career_agent.py  coding_agent.py  research_agent.py
personal_assistant/auth/: api_keys.py  password.py  tokens.py
personal_assistant/core/: agent.py  orchestrator.py  supervisor.py  tool.py  workspace.py
personal_assistant/persistence/: __init__.py  api_key_repository.py  database.py  models.py  repository.py  user_repository.py  user_workspace_repository.py
personal_assistant/providers/: __init__.py  anthropic.py  base.py  ollama.py  registry.py
personal_assistant/services/: __init__.py  agent_service.py  auth_service.py  conversation_cache.py  conversation_pool.py  conversation_service.py  exceptions.py  schemas.py  usage_service.py  user_orchestrator_registry.py  views.py  workspace_service.py
personal_assistant/tools/: example_tool.py  indeed_tool.py
personal_assistant/workspaces/: default_workspace.py
plans/: 2026-03-18-web-ui.md
tests/: conftest.py
tests/evaluation/: __init__.py  conftest.py
tests/evaluation/api/: __init__.py  test_chat.py  test_workspace_chat.py
tests/functional/: conftest.py
tests/functional/api/: test_agents.py  test_auth.py  test_health.py  test_usage.py  test_workspaces.py
tests/unit/: conftest.py  test_bootstrap.py
tests/unit/agents/: test_agent_specializations.py
tests/unit/api/: conftest.py  test_agents_router.py  test_auth_router.py  test_dependencies.py  test_exception_handlers.py  test_health_router.py  test_providers_router.py  test_rate_limit.py  test_schemas.py  test_streaming.py  test_usage_router.py  test_workspaces_router.py
tests/unit/auth/: test_api_keys.py
tests/unit/core/: test_agent.py  test_orchestrator.py  test_supervisor.py  test_supervisor_route.py  test_workspace.py
tests/unit/persistence/: test_api_key_repository.py  test_database.py  test_models.py  test_repository.py  test_user_repository.py  test_user_workspace_repository.py
tests/unit/providers/: test_providers.py  test_registry.py
tests/unit/services/: test_agent_service.py  test_auth_service.py  test_conversation_cache.py  test_conversation_pool.py  test_conversation_service.py  test_workspace_service.py
tests/unit/tools/: test_example_tool.py  test_indeed_tool.py
tests/unit/workspaces/: test_default_workspace.py
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ui/e2e/: agent-config.spec.ts  api-keys.spec.ts  auth.spec.ts  chat.spec.ts  conversation-history.spec.ts  fixtures.ts  register.spec.ts  smart-redirect.spec.ts  theme.spec.ts  workspaces.spec.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts  schema.ts
ui/src/components/: Avatar.tsx  ChatInput.tsx  CommandPalette.tsx  Layout.tsx  MessageBubble.tsx  ProtectedRoute.tsx  Sidebar.tsx
ui/src/components/__tests__/: MessageBubble.test.tsx  Sidebar.test.tsx
ui/src/contexts/: AuthContext.tsx  ThemeContext.tsx
ui/src/contexts/__tests__/: AuthContext.test.tsx
ui/src/hooks/: useChatStream.ts  useCommandPalette.ts
ui/src/hooks/__tests__/: useChatStream.test.ts
ui/src/pages/: AgentConfig.tsx  ApiKeys.tsx  Chat.tsx  ConversationHistory.tsx  Login.tsx  UsageDashboard.tsx  WorkspaceList.tsx
ui/src/pages/__tests__/: AgentConfig.test.tsx  ApiKeys.test.tsx  Chat.test.tsx  ConversationHistory.test.tsx  Login.test.tsx  WorkspaceList.test.tsx
ui/src/test/: setup.ts
