[project]
name = "personal-assistant"
version = "0.1.0"
description = "A modular AI personal assistant built on LangChain agents and configurable workspaces."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=1.0.1",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "fastapi[standard]>=0.135.1",
]

[dependency-groups]
dev = [
    "deepeval>=0.21.76",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not evaluation'"
markers = [
    "evaluation: LLM evaluation tests (require local Ollama, skipped in CI)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "B008", # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["personal_assistant"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
# Third-party libraries without stubs — ignore missing imports
ignore_missing_imports = true
